--- a/candidate/backend/.env
+++ b/candidate/backend/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://samkitsamsukhais23:samkit@reelspro.z0tlf.mongodb.net/?retryWrites=true&w=majority&appName=reelspro
 PORT=5000
+GROQ_API_KEY="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"
+API_KEY="AIzaSyBDUEpfF_2Ar-wKnDiVoyGuZxaN2D8aTJA"
